--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=backend
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/fintrack_db
-spring.datasource.username=postgres
-spring.datasource.password=anekpass
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database Configuration 
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/fintrack_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
