--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <!--.env -->
+        <dependency>
+    <groupId>io.github.cdimascio</groupId>
+    <artifactId>dotenv-java</artifactId>
+    <version>2.3.2</version> 
+</dependency>
     </dependencies>
 
     <build>
